src/test/ui/issue-11374.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11374.rs:36:15
   |
LL |     c.read_to(v); //~ ERROR E0308
   |               ^
   |               |
   |               expected &mut [u8], found struct `std::vec::Vec`
   |               help: consider mutably borrowing here: `&mut v`
   |
   = note: expected type `&mut [u8]`
              found type `std::vec::Vec<_>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
